endpoint for fetching channel claim